[package]
authors = ["Zack Young <zaaack@qq.com>"]
categories = ["development-tools", "development-tools::debugging"]
description = "  A debug crate for rust inspired by NodeJS debug module, colored, including crate name, file name and line, filtered by glob patterns.\n"
documentation = "https://docs.rs/debug/"
exclude = ["docs/**/*"]
keywords = ["debug", "dev", "development"]
license = "MIT"
name = "debug-rs"
readme = "README.md"
repository = "https://github.com/zaaack/debug-rs/"
version = "0.1.2"

[dependencies]
colored = "1.5.2"
globset = "0.2.0"
lazy_static = "0.2.8"

[features]
default = []
disable = []
